--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razorpay-Best Payment Solution</title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="main.css">
     <script src="https://unpkg.com/feather-icons"></script>
 
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
